# onboarding

./: .gitignore  .travis.yml  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
data/: Application.css  StyleView.css  WelcomeView.css  application.css  autostart.desktop  io.elementary.onboarding.desktop.in  io.elementary.onboarding.gresource.xml  io.elementary.onboarding.gschema.xml  meson.build  onboarding.appdata.xml.in  onboarding.gresource.xml  onboarding.metainfo.xml.in  prefs.sh
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+161 more)
src/: Application.vala  DemoWindow.vala  MainWindow.vala  PageChecker.vala  PantheonAccountsServicePlugin.vala  ShowWorkspace.vala  SwitchWorkspace.vala  Switcher.vala  Utils.vala  config.vala.in  meson.build
src/GestureDemo/: DemoWindow.vala  MultitaskingDemo.vala  ShowWorkspace.vala  SwitchWorkspace.vala  SwitchWorkspaceDemo.vala
src/Interfaces/: MutterDisplayConfig.vala
src/Objects/: Monitor.vala  MonitorManager.vala  MonitorMode.vala  VirtualMonitor.vala
src/Views/: AbstractInstallerView.vala  AbstractOnboardingView.vala  AppCenterView.vala  EarlyAccessView.vala  FinishView.vala  FwupdView.vala  GuestView.vala  HouseKeepingView.vala  ImmutableView.vala  LocationServicesView.vala  MultitouchView.vala  NetworkView.vala  NightLightView.vala  OnlineAccountsView.vala  PreReleaseWarningView.vala  ScalingFactorView.vala  SearchEngineView.vala  StyleView.vala  SyncView.vala  UIScaleView.vala  UpdateView.vala  UpdatesView.vala  VirtualMachineView.vala  WelcomeView.vala  WhatsNewView.vala
src/Widgets/: ImageLinkButton.vala
