
vala_files = [
    'Application.vala',
    'MainWindow.vala',
    'Utils.vala',
    'Views/AbstractOnboardingView.vala',
    'Views/AppCenterView.vala',
    'Views/FinishView.vala',
    'Views/HouseKeepingView.vala',
    'Views/LocationServicesView.vala',
    'Views/NightLightView.vala',
    'Views/UpdateView.vala',
    'Views/WelcomeView.vala',
]

executable(meson.project_name(), vala_files,
           asresources,
           dependencies : dependencies,
           install: true)
